k8s-dev/client-deployment.yaml
apiVersion: apps/v1
kind:   Deployment
metadata:
    name:   client-deployment
spec:
    replicas:   3
    selector:
        matchLabels:
            component:  web
    template:
        metadata:
            labels:
                component:  web
        spec:
            containers:
                -   name:   client
                    image:  barrybt23/multi-client
                    resources:
                        limits:
                            memory: "512Mi"
                            cpu:    "500m"
                    ports:
                        -   containerPort:  3000
