k8s-dev/redis-cluster-ip-service.yaml
apiVersion: v1
kind: Service
metadata:
    name: redis-cluster-ip-service
spec:
    type: ClusterIP
    selector:
        #/this is arbitrary but must match the pod we want to direct to
        component: redis
    ports:
        #/port other pods would use
        -   port: 6379
        #/this is the targeted pod. does not need to change
            targetPort: 6379
